--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,46 +8,10 @@
     android:orientation="vertical"
     tools:context="com.xiaoniu.finance.easyswitch.MainActivity">
 
-    <com.xiaoniu.finance.easyswitch.ScrollSwitch
-        android:id="@+id/switch_click"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
-
-    <com.xiaoniu.finance.easyswitch.ScrollSwitchLock
-        android:id="@+id/scroll_lock"
+    <com.xiaoniu.finance.easyswitch.SelfSlidingMenu
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:background="#22000000"/>
-
-    <com.xiaoniu.finance.easyswitch.ViewGroupChanged
-        android:id="@+id/group"
-        android:layout_width="400dp"
         android:layout_height="match_parent">
-
-        <View
-            android:layout_width="200dp"
-            android:layout_height="80dp"
-            android:background="#66ff0000"/>
-
-        <View
-            android:layout_width="200dp"
-            android:layout_height="80dp"
-            android:background="#6600ff00"/>
-
-        <View
-            android:layout_width="200dp"
-            android:layout_height="80dp"
-            android:background="#440000ff"/>
-
-        <View
-            android:layout_width="200dp"
-            android:layout_height="80dp"
-            android:background="#660ff1f0"/>
-
-        <View
-            android:layout_width="200dp"
-            android:layout_height="80dp"
-            android:background="#66ff3fee"/>
-    </com.xiaoniu.finance.easyswitch.ViewGroupChanged>
+        <include layout="@layout/main_layout"/>
+        <include layout="@layout/menu_layout"/>
+    </com.xiaoniu.finance.easyswitch.SelfSlidingMenu>
 </LinearLayout>
